test/golden96/{piCL.{}}.9894464503607709506.golden
INITIALPATH:7:28: error:
    • 
unexpected "}"
expecting an haskell expression
    • In the quasi-quotation: [fmt|{pi:.{}}|]
  |
7 | main = putStrLn [fmt|{pi:.{}}|]
  |                            ^